feat: add internalReference read xml
Signed-off-by: licho <lecho.sun@gmail.com>